@@ -254,7 +254,7 @@ func (worker *worker) SendResultDup(result *answer) {
 //Shutdown and unregister this worker
 func (worker *worker) Shutdown() {
 	logger.Debugf("worker shutting down")
-	worker.mainWorker.unregisterWorker(worker)
+	defer worker.mainWorker.unregisterWorker(worker)
 	if worker.worker != nil {
 		worker.worker.ErrorHandler = nil
 		if !worker.idle {
