@@ -1,5 +1,9 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
+next:
+          - improve reloading configuration
+          - fix timeout on shutdown
+
 1.0.5    Tue Dec  4 17:13:48 CET 2018
           - add grace period to reloads and shutdown
           - improve maintaining worker level during reload
